kubernetes-confs/nginx/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-php
  namespace: webserver-01
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-php
  template:
    metadata:
      labels:
        app: nginx-php
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: shared-storage
              mountPath: "/usr/share/nginx/html"

            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf  # Fixes read-only ConfigMap issue

            - name: ssl-certs
              mountPath: /etc/nginx/ssl
              readOnly: true


        - name: php-fpm
          image: php:8.2-fpm
          volumeMounts:
            - name: shared-storage
              mountPath: "/usr/share/nginx/html"

      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc

        - name: nginx-config
          configMap:
            name: nginx-config

        - name: ssl-certs
          secret:
           secretName: wildcard-cert-secret
