kubernetes-confs/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-php
  namespace: webserver-01
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app: nginx-php
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  type: LoadBalancer
